Add Toast Notification

--- a/Wordreference/Wordreference/Wordreference.Shared/Strings/en-US/Resources.resw
+++ b/Wordreference/Wordreference/Wordreference.Shared/Strings/en-US/Resources.resw
@@ -183,4 +183,7 @@
   <data name="savingSettings" xml:space="preserve">
     <value>saving settings</value>
   </data>
+  <data name="ApiErrorDescription" xml:space="preserve">
+    <value>Sorry, we can't find this word</value>
+  </data>
 </root>
