--- a/Wordreference/Wordreference/Wordreference.Shared/Strings/es-ES/Resources.resw
+++ b/Wordreference/Wordreference/Wordreference.Shared/Strings/es-ES/Resources.resw
@@ -183,4 +183,7 @@
   <data name="savingSettings" xml:space="preserve">
     <value>saving settings</value>
   </data>
+  <data name="ApiErrorDescription" xml:space="preserve">
+    <value>Lo sentimos, no podemos encontrar el palabra</value>
+  </data>
 </root>
