--- a/Wordreference/Wordreference/Wordreference.Shared/Strings/fr-FR/Resources.resw
+++ b/Wordreference/Wordreference/Wordreference.Shared/Strings/fr-FR/Resources.resw
@@ -186,4 +186,7 @@
   <data name="ApiErrorDescription" xml:space="preserve">
     <value>Désolé, nous n'avons pu trouver le mot recherché.</value>
   </data>
+  <data name="RequiredInternetConnection" xml:space="preserve">
+    <value>Cette application nécessite une connexion internet</value>
+  </data>
 </root>
