--- a/Wordreference/Wordreference/Wordreference.Shared/Strings/it-IT/LanguageResources.resw
+++ b/Wordreference/Wordreference/Wordreference.Shared/Strings/it-IT/LanguageResources.resw
@@ -132,6 +132,9 @@
   <data name="french" xml:space="preserve">
     <value>francese</value>
   </data>
+  <data name="german" xml:space="preserve">
+    <value>tedesco</value>
+  </data>
   <data name="greek" xml:space="preserve">
     <value>greco</value>
   </data>
@@ -153,8 +156,14 @@
   <data name="romanian" xml:space="preserve">
     <value>rumeno</value>
   </data>
+  <data name="russian" xml:space="preserve">
+    <value>russo</value>
+  </data>
   <data name="spanish" xml:space="preserve">
     <value>spagnolo</value>
+  </data>
+  <data name="swedish" xml:space="preserve">
+    <value>svedese</value>
   </data>
   <data name="turkish" xml:space="preserve">
     <value>turco</value>
